# Pancake

./: .gitignore  Cargo.toml  Makefile  README.md
distro/debian-live/auto/: config
distro/debian-live/config/archives/: trixie-backports.list.chroot
distro/debian-live/config/hooks/normal/: 010-pancake-live.hook.chroot  099-pancake-autologin.hook.chroot
distro/debian-live/config/includes.binary/boot/grub/: grub.cfg
distro/debian-live/config/includes.chroot/etc/: motd
distro/debian-live/config/includes.chroot/etc/gtk-3.0/: settings.ini
distro/debian-live/config/includes.chroot/etc/hypr/: hyprland.conf
distro/debian-live/config/includes.chroot/etc/pancake/: config.confi
distro/debian-live/config/includes.chroot/etc/systemd/system/: pancake-xdg-runtime.service  seatd.service
distro/debian-live/config/includes.chroot/etc/xdg/foot/: foot.ini
distro/debian-live/config/includes.chroot/etc/xdg/waybar/: config
distro/debian-live/config/includes.chroot/etc/xdg/wofi/: config  style.css
distro/debian-live/config/includes.chroot/root/: .bash_profile
distro/debian-live/config/package-lists/: pancake.list.chroot
distro/ubuntu-live/auto/: config
distro/ubuntu-live/config/hooks/normal/: 010-pancake-live.hook.chroot  020-grub-timeout.hook.chroot  030-build-hyprland.hook.chroot  080-generate-initrd.hook.chroot  090-copy-casper-kernel.hook.binary  099-generate-md5sum.hook.binary  099-pancake-autologin.hook.chroot
distro/ubuntu-live/config/includes.binary/boot/grub/: grub.cfg
distro/ubuntu-live/config/includes.binary/live/: filesystem.squashfs  vmlinuz
distro/ubuntu-live/config/includes.chroot/etc/: motd
distro/ubuntu-live/config/includes.chroot/etc/gtk-4.0/: settings.ini
distro/ubuntu-live/config/includes.chroot/etc/pancake/: config.confi
distro/ubuntu-live/config/includes.chroot/etc/systemd/logind.conf.d/: do-not-suspend.conf
distro/ubuntu-live/config/includes.chroot/etc/systemd/system/: pancake-live.service
distro/ubuntu-live/config/includes.chroot/etc/xdg/foot/: foot.ini
distro/ubuntu-live/config/includes.chroot/etc/xdg/waybar/: config  style.css
distro/ubuntu-live/config/includes.chroot/root/: .bash_profile
distro/ubuntu-live/config/package-lists/: pancake.list.chroot
docs/: base-distro.md
iso/profile/: packages.x86_64  pacman.conf  profiledef.sh
iso/profile/airootfs/etc/: motd  shells
iso/profile/airootfs/etc/systemd/system/: pancake-xdg-runtime.service  seatd.service
iso/profile/airootfs/etc/udev/rules.d/: 72-seat.rules
iso/profile/airootfs/root/: .bash_profile  .bashrc
iso/profile/efiboot/loader/: loader.conf
iso/profile/efiboot/loader/entries/: 01-pancake-linux.conf
iso/profile/syslinux/: archiso_sys-linux.cfg  archiso_sys.cfg
scripts/: build-debian-iso-container.sh  build-ubuntu-iso-container.sh  gen-wallpaper.py  iso-info.sh
src/: config.rs  main.rs  state.rs
src/backend/: gpu.rs  mod.rs  udev.rs  winit.rs
src/handlers/: compositor.rs  input.rs  layer_shell.rs  mod.rs  xdg_decoration.rs  xdg_shell.rs  xwayland.rs
src/render/: aero.rs  borders.rs  cursor.rs  decorations.rs  mod.rs
src/shell/: layout.rs  mod.rs  workspace.rs
src/syrup/: lua.rs  mod.rs  native.rs
(+3 files in other folders)
