[package]
name = "pancake"
version = "0.1.0"
edition = "2021"
description = "Pancake — the Sweetest, Smoothest Desktop Environment (Aero-COSMIC)"
license = "GPL-3.0"

[[bin]]
name = "pancake"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_egl",
    "backend_session",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_pixman",
    "wayland_frontend",
    "xwayland",
    "desktop",
] }

# Must match smithay's transitive versions exactly
calloop  = "0.14"
winit    = { version = "0.30" }
input    = { version = "0.9", features = ["libinput_1_19"] }

wayland-server    = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "unstable"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap      = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow    = "1"

serde = { version = "1", features = ["derive"] }
toml  = "0.8"
libc  = "0.2"

# Cursor rendering
xcursor = "0.3"

# Wallpaper loading
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }

# Syrup config — Lua frontend
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[profile.release]
opt-level     = 2       # 2 is almost as fast as 3, compiles noticeably quicker
lto           = "thin"  # thin LTO: good binary, much faster than fat LTO
codegen-units = 4       # more units = faster compile, slightly larger binary
strip         = true    # strip debug symbols — smaller ISO, faster squashfs

# Fast iteration profile: `cargo build --profile dev-fast`
# Same as dev but skips redundant codegen, links faster
[profile.dev-fast]
inherits      = "dev"
opt-level     = 1
codegen-units = 256
incremental   = true

[profile.dev]
opt-level   = 1
incremental = true
